# buscador-casita-chiquis

./: .env.example  .gitignore  CLAUDE.md  GUIDELINES.md  LEARNINGS.md  PITCH.md  README.md  fix_direcciones.py  propiedades.csv  pyproject.toml  sheets.py  update_sheet.py
.github/workflows/: update-data.yml
argentina_scraper/: __init__.py  cli.py  config.py  storage.py
argentina_scraper/models/: __init__.py  database.py  property.py
argentina_scraper/scrapers/: __init__.py  argenprop.py  base.py  mercadolibre.py  zonaprop.py
argentina_scraper/utils/: __init__.py  helpers.py
dashboard/: datos_ejemplo.csv
docs/: compra.html  data.csv  index.html  seguimiento_propiedades_v3.xlsx  stats.html
docs/css/: styles.css
docs/js/: api.js  app.js  components.js  compra.js  config.js  stats.js  utils.js
features_V2/: integration-guide.js  marketData.js  marketUI.js
sheets/: README.md  add_links.py  clean_sheet.py  complete_excel.py  reorganize_sheet.py  setup_sheet.py  sync_sheet.py  test_cli_commands.py  test_core_modules.py  test_integration.py  test_sync_sheet.py
sheets/core/: __init__.py  helpers.py  prints.py  scrapers.py  sheets_api.py  storage.py  templates.py  validation.py
